# cdcm

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CMakeLists.txt  Dockerfile  LICENSE  README.md  cdcm_settings.json  deploy.sh  libpe.patch  samba.patch
src/: CMakeLists.txt  CodeCoverage.cmake  TODO
src/backend/: CMakeLists.txt  cdcm_worker_process.cpp  message_worker.cpp  message_worker.hpp
src/backend/actions/: CMakeLists.txt  close_session.cpp  start_session.cpp  start_session.hpp
src/backend/services/: CMakeLists.txt  samba.cmake
src/backend/services/impacket_based/: CMakeLists.txt
src/backend/services/registry/: CMakeLists.txt  registry.json  registry_client.cpp  registry_client.hpp  registry_service_configuration.hpp  registry_value.hpp
src/backend/services/samba_based/: CMakeLists.txt  samba.cmake
src/backend/services/smb/: CMakeLists.txt  smb.json  smb_client.cpp  smb_client.hpp  smb_service_configuration.hpp
src/backend/services/winrm/: CMakeLists.txt  my_client.cpp  winrm.json  winrm_service_configuration.hpp
src/backend/utils/: CMakeLists.txt  action_manager.cpp  action_manager.hpp  base64_encode.hpp  bounded_chunk.hpp  clients_map.cpp  clients_map.hpp  file_mapper.cpp  file_mapper.hpp  file_reader.cpp  file_reader.hpp  pe_context.cpp  pe_context.hpp  postponed_actions.hpp  registry_utils.cpp  registry_utils.hpp  registry_value.hpp  runner.cpp  session_to_client_container.cpp  session_to_client_container.hpp  shared_library.hpp
src/clients/registry/: registry_client.cpp  registry_client.hpp  registry_value.hpp
src/clients/smb/: CMakeLists.txt  smb_client.cpp  smb_client.hpp
src/common/: CMakeLists.txt  action.hpp  client.hpp  configurable.hpp  configuration.hpp  credentials.cpp  credentials.hpp  dispatcher.hpp  file_reader_interface.hpp  service_configuration.hpp  session.cpp  session.hpp  typedefs.hpp  wildcards.hpp
src/common/Logger/: CMakeLists.txt  Logger.cpp  OS.h
src/common/Logger/Sinks/: FileSink.h
src/common/Logger/conf/: LoggerConfiguration.cpp  LoggerConfiguration.h
src/common/Logger/include/: Enums.h  Logger.h  Observer.h  Threads.h  Timer.h
src/common/Logger/unittest/: CMakeLists.txt  logger_test.cpp
src/common/protocol/: CMakeLists.txt  msg_types.hpp  protocol.hpp
src/common/sessions_cache/: CMakeLists.txt  inproc_sessions_cache.hpp  shared_mem_converters.cpp  shared_mem_converters.hpp  shared_mem_session.cpp  shared_mem_session.hpp  shared_mem_sessions_cache.cpp  shared_mem_sessions_cache.hpp
src/common/singleton_runner/: CMakeLists.txt  authenticated_scan_server.cpp  authenticated_scan_server.hpp  clients_deleter.hpp  log_macros.hpp  process_specific_object.hpp  settings.cpp  settings.hpp
src/common/utils/: scoped_timer.hpp
src/common/zmq/: CMakeLists.txt  mdp.hpp  zmq_helpers.cpp  zmq_helpers.hpp  zmq_message.cpp  zmq_message.hpp
src/frontend/: CMakeLists.txt  cdcm_broker.cpp  maintenance.cpp  maintenance.hpp  message_broker.cpp  message_broker.hpp  worker_container.hpp  workers_monitor.cpp  workers_monitor.hpp
src/frontend/actions/: CMakeLists.txt  close_session.cpp  close_session.hpp  get_cdcm_info.cpp  get_cdcm_info.hpp  start_session.cpp  start_session.hpp
src/patches/: libpe_new.patch  new_pev_patch.patch  pe-pev.patch  pev.patch  samba.patch
src/scripts/: CMakeLists.txt
src/services/internal/: CMakeLists.txt  close_session.cpp  file_version.cpp  get_remote_file_version.cpp  start_session.cpp  start_session.hpp
src/services/registry/: CMakeLists.txt  enumerate_key.cpp  get_os.cpp  key_exists.cpp  query_value.cpp  registry_action.cpp  value_exists.cpp  value_exists.hpp
src/services/smb/: CMakeLists.txt  file_exists.cpp  file_exists.hpp  get_file.cpp  get_file.hpp  get_file_info.cpp  get_file_info.hpp  list_dir.cpp  list_dir.hpp  read_file.cpp  read_file.hpp
src/supervisor/: CMakeLists.txt  supervisor.cpp  supervisor.hpp  workers_monitor.cpp  workers_monitor.hpp
src/tests/: CMakeLists.txt  mdcliapi2.hpp  mdclient2.cpp  runner.cpp  shared_mem_tests_cleaner.cpp  shared_mem_tests_inserter.cpp  shared_mem_tests_user.cpp  test_runner.cpp  tests_externalData_config.cmake
src/tests/clients/: registery_client_tester.cpp
src/tests/common/: CMakeLists.txt
src/tests/file_version_test/: file_version_extract_testold.cpp
src/tests/frontend/: worker_container_test.cpp
src/tests/functional_tests/: CMakeLists.txt  README.md  actions.xml  actions1.xml  exe_test  full.xml  functional_tests_runner_test.cpp  get_file_info_dlls.xml  mdcliapi2.rb  myLogger.rb  results_verification.rb  run_multiple_clients.rb  testRunner.rb  testsRunner_settings.json
src/trustwave/: .gitignore  CMakeLists.txt  authenticated_scan_server.cpp  authenticated_scan_server.hpp  cdcm.sh  cdcm_settings.json  log_macros.hpp  mdp.hpp  message_broker.cpp  message_broker.hpp  message_worker.cpp  message_worker.hpp  run_cdcm.sh  settings.cpp  settings.hpp  smb_cli_test.cpp  wscript  wscript_build  zmq_helpers.cpp  zmq_helpers.hpp  zmq_message.cpp
src/trustwave/Logger/: module.xml
src/trustwave/backend/: CMakeLists.txt  cdcm_worker_process.cpp  message_worker.cpp  message_worker.hpp  wscript_build
src/trustwave/clients/: CMakeLists.txt  wscript_build
src/trustwave/clients/registry/: CMakeLists.txt  (+6 more)
src/trustwave/common/: CMakeLists.txt  action.hpp  client.hpp  credentials.cpp  credentials.hpp  dispatcher.hpp  session.cpp  session.hpp  typedefs.hpp  wscript_build
src/trustwave/frontend/: CMakeLists.txt  cdcm_broker.cpp  message_broker.cpp  message_broker.hpp  worker_container.cpp  worker_container.hpp  workers_monitor.cpp  workers_monitor.hpp  wscript_build
src/trustwave/lib/: Makefile
src/trustwave/misc/: action.cpp  action.hpp  credentials.cpp  dispatcher.hpp  session.cpp  session.hpp  sessions_container.hpp
src/trustwave/scripts/: run_cdcm.sh
src/trustwave/services/: CMakeLists.txt  wscript_build
src/trustwave/tests/: CMakeLists.txt  mdcliapi2.hpp  mdclient2.cpp  shared_mem_tests_cleaner.cpp  shared_mem_tests_inserter.cpp  shared_mem_tests_user.cpp  test1.cpp  test_runner.cpp  wscript_build
(+279 files in other folders)
